--- a/index.html
+++ b/index.html
@@ -101,5 +101,54 @@
                 </div>
             </div>
         </div>
-        <
+        <div id="results-section" class="hidden">
+            <h2>Your Results</h2>
+            <div id="results-container"></div>
+            <div id="video-container" class="hidden">
+                <video width="320" height="240" controls>
+                    <source src="BIG BANG ATTACK.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <button class="btn btn-secondary" onclick="restartTest()">Restart</button>
+            <button class="btn btn-secondary" id="download-results" onclick="downloadResultsAsPDF()">Download Results as PDF</button>
+        </div>
+        <section class="download-section">
+            <h2>Download Game</h2>
+            <a class="btn btn-info" href="NineEleven.exe" download>Download Nine Eleven Game</a>
+        </section>
+        <hr>
+        <section class="playlist-section">
+            <h2>Playlist</h2>
+            <input type="file" id="song-input" multiple>
+            <button class="btn btn-primary" onclick="uploadSongs()">Upload Songs</button>
+            <div class="playlist-container">
+                <ul id="playlist"></ul>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Follow us on social media: <a href="https://www.youtube.com/watch?v=87SIhiQPjtk" target="_blank">YouTube</a></p>
+        <p>&copy; 2024 BDSM Test. All rights reserved.</p>
+    </footer>
+
+    <div class="video-container video-left">
+        <video id="video-left" autoplay loop muted>
+            <source src="DBZ memes.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <button class="btn btn-warning mute-button" onclick="toggleSound('video-left')">🔇</button>
+        <button class="btn btn-warning toggle-video" onclick="toggleVideo('video-left')">Hide Video</button>
+    </div>
+
+    <div class="video-container video-right">
+        <video id="video-right" autoplay loop muted>
+            <source src="Japanese songs that sing about depression.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <button class="btn btn-warning mute-button" onclick="toggleSound('video-right')">🔇</button>
+        <button class="btn btn-warning toggle-video" onclick="toggleVideo('video-right')">Hide Video</button>
+    </div>
+
+    <script src="script.js"></script>
 
