--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
         <div>
             <div class="d-flex justify-content-end align-items-center" id="user-info">
-                <a href="login.php" class="ml-3 btn btn-primary">Login</a>
-                <a href="register.php" class="ml-3 btn btn-primary">Register</a>
+                <a href="login.html" class="ml-3 btn btn-primary">Login</a>
+                <a href="register.html" class="ml-3 btn btn-primary">Register</a>
             </div>
         </div>
     </header>
