--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
                 <p>Play the Miguel Fight.</p>
                 <button class="btn btn-primary" onclick="window.location.href='sans-fight/Build/index.html'">Play Miguel sans-fight</button>
             </div>
+            <div class="mode">
+                <h3><i class="fas fa-air"></i>Artur last stand</h3>
+                <p>LAST BREATH.</p>
+                <button class="btn btn-primary" onclick="window.location.href='undertale-last-breath-remake-bad-time-simulator-master/index.html'">Artur :You ... can´t ... beat me</button>
+            </div>
+            
         </section>
         <div id="test-section" class="hidden">
             <div id="question-container">
